summative.moria.Moria.scala.error
Compilation error:
Moria:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true;
           ^Moria:15: warning: enclosing method getThaRock has result type Unit: return value discarded
    return true;
    ^Moria:17: error: Unit does not take parameters
    getOutAlive()
               ^Moria:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false;
           ^Moria:18: warning: enclosing method getThaRock has result type Unit: return value discarded
    return false;
    ^Moria:29: error: Unit does not take parameters
while(getThaRock()){} 
                ^